--- a/plenaries/drugs.html
+++ b/plenaries/drugs.html
@@ -10,7 +10,7 @@
   <title>Drug Legalization in a Progressive World | The World Affairs Conference</title>
   <meta name="description" content="This past summer, the federal government of Canada has passed a bill to legalize the recreational use of marijuana. This bill however, was not the first of i...">
 
-  <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
@@ -32,7 +32,7 @@
 	<body>
 
 		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="/"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
+  <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -40,25 +40,25 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/keynote/">Keynote</a>
+        <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/addresses/">Addresses</a>
+        <a class="nav-link" href="../addresses/index.html">Addresses</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/plenaries/">Plenaries</a>
+        <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/faq/">FAQ</a>
+        <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/staff/">Staff</a>
+        <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/schedule/">Schedule</a>
+        <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact/">Contact</a>
+        <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
@@ -75,7 +75,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h1>Drug Legalization in a Progressive World</h1>
-						<img class="img-fluid plenary-img" src="/img/plen/drug.svg" alt="Drug Legalization in a Progressive World picture"/>
+						<img class="img-fluid plenary-img" src="../img/plen/drug.svg" alt="Drug Legalization in a Progressive World picture"/>
 						<p class="card-text">
 							<p>This past summer, the federal government of Canada has passed a bill to legalize the recreational use of marijuana. This bill however, was not the first of its kind. Over the past 10 years, multiple governments throughout the world have taken action to make many previously illegal drugs either legalized, or legal under certain conditions. Major international examples that have implemented such measures include the Netherlands, Spain, Switzerland, and South Africa. Even within Canada, safe injection sites, sites where hard drugs such as cocaine and heroine are legally ingested under professional supervision, are becoming more and more prevalent. As politicians and activists call for more progressive action, the legalization movement is becoming more and more controversial with each new piece of legislature that is implemented. Should Canada take further steps to legalize other presently illegal drugs? Should Canada take a step back and reconsider its decision to legalize marijuana entirely? Should other countries follow Canada’s lead?</p>
 
@@ -90,7 +90,7 @@
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="/img/speakers/ayoung.jpg" alt="Alan Young">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ayoung.jpg" alt="Alan Young">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Alan Young</h2>
@@ -99,7 +99,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="/img/speakers/avatar.png" alt="Dessy Pavlova">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/avatar.png" alt="Dessy Pavlova">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Dessy Pavlova</h2>
