--- a/plenaries/drugs.html
+++ b/plenaries/drugs.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>Drug Legalization in a Progressive World | The World Affairs Conference</title>
-  <meta name="description" content="This past summer, the federal government of Canada has passed a bill to legalize the recreational use of marijuana. This bill however, was not the first of i...">
+  <title>Data Daycare | The World Affairs Conference</title>
+  <meta name="description" content="Cryptocurrency is an emerging technology changing the way we transact money. Or is it? Since the emergence of the first cryptocurrency (Bitcoin) in 2009, ban...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
@@ -74,10 +74,18 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Drug Legalization in a Progressive World</h1>
-						<img class="img-fluid plenary-img" src="../img/plen/drug.svg" alt="Drug Legalization in a Progressive World picture"/>
+						<h1>Data Datcare</h1>
+						<img class="img-fluid plenary-img" src="../img/plen/crypto.svg" alt="Data Daycare"/>
 						<p class="card-text">
-							<p>This past summer, the federal government of Canada has passed a bill to legalize the recreational use of marijuana. This bill however, was not the first of its kind. Over the past 10 years, multiple governments throughout the world have taken action to make many previously illegal drugs either legalized, or legal under certain conditions. Major international examples that have implemented such measures include the Netherlands, Spain, Switzerland, and South Africa. Even within Canada, safe injection sites, sites where hard drugs such as cocaine and heroine are legally ingested under professional supervision, are becoming more and more prevalent. As politicians and activists call for more progressive action, the legalization movement is becoming more and more controversial with each new piece of legislature that is implemented. Should Canada take further steps to legalize other presently illegal drugs? Should Canada take a step back and reconsider its decision to legalize marijuana entirely? Should other countries follow Canada’s lead?</p>
+							<p>We are currently living in the “age of data”, where everything that surrounds us is linked to a data source and everything in our lives is captured digitally. The physical world around us has turned into raw information: internet, video, call data records, customer transactions, healthcare records, etc. 
+
+              We like to call it big data—and it is indeed getting bigger, growing exponentially with each passing day. Luckily, the opportunities to take this data and combine it with analytics to improve all aspects of our lives are also growing exponentially.
+
+              The increasing prevalence of big data, however, draws questions and controversy about the safety of our own personal data, with tremendous potential to be exploited with wide-ranging consequences.
+            </p>
+
+          <p>But there are some questions we must ask, too. How is automation impacting various sectors of the economy, from those where jobs are being destroyed to those where jobs are being created. How can society handle such a shift? Do we have the right public policy imperatives, and the right social infrastructure, to handle such shifts? What is the right ethical framework to make decisions about the deployment of automation/AI?
+          Our plenary prepares our generation - the first generation that will be fully immersed in this technology - for what we need to know to be prepared for the exponential increase of cryptocurrencies in the years to come.</p>
 
 						</p>
 						<p class="card-text">
@@ -90,20 +98,25 @@
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ayoung.jpg" alt="Alan Young">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/agupta.png" alt="Arvind Gupta">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Alan Young</h2>
-						Alan Young is Co-Founder and Director of Osgoode Hall's innocence project, a clinical program that that guides JD students through the process of investigating suspected cases of wrongful conviction and imprisonment. In addition to this, he maintains a small practice specializing in criminal law and procedure that is primarily devoted to challenging state authority to criminalize consensual activity. Throughout his years of practice, he has represented countless numbers of people suffering from AIDS, cancer and multiple sclerosis who were charged after using marijuana for medicinal purposes, and as a result of these cases, the Federal Government was compelled to create a regulatory program authorizing the use of medical marijuana.
+						<h2 class="text-center text-md-left">Dr. Arvind Gupta</h2>
+						Arvind Gupta is Professor of Computer Science at the University of Toronto. He has served as President and Vice-Chancellor of UBC, and as the CEO and Scientific Director of Mitacs Inc. Arvind has published extensively on theoretical computer science, computational genomics, and national innovation strategies. 
+
+            Arvind has a record of accomplishment for initiatives that improve Canada’s productivity and competitiveness by successfully enhancing workforce skills through industry-academic partnerships. As the founder of Mitacs, he achieved success in interweaving graduate education with socioeconomic needs by bringing together 60 universities with more than 1,000 civil society partners. Most recently he co-founded Palette Skills Inc, a Federal not-for-profit dedicated to creating transition pathways to the knowledge economy for mid-career professionals whose careers are adversely being impacted by automation. 
+
+            Arvind was instrumental in creating the Pacific Institute for the Mathematical Sciences (PIMS) and the Banff International Research Station (BIRS). He is a Senior Fellow of the Brookfield Institute and serves on the Boards of the India-Canada Research Centre of Excellence (IC-IMPACTS), BIRS, the Fields Institute, the Canadian Statistical Sciences Institute, and SimTrec.
+
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/avatar.png" alt="Dessy Pavlova">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/fkerschbaum.png" alt="Florian Kerschbaum">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dessy Pavlova</h2>
-						Dessy Pavlova has been studying drug policy and the cannabis industry for a decade. She is a professional writing and English graduate with a passion for research in cannabis, drug research and grassroots political advocacy. As a marketing strategist, she has worked with a number of medical cannabis companies through the various changes in regulations from Health Canada's original Medical Marihuana Access Regulations (MMAR) to the Access to Cannabis for Medical Purposes Regulations (ACMPR). She also is a member of the Toronto Drug Strategy Overdose Awareness steering committee. After getting involved with CSSDP in high school, she founded CSSDP YorkU chapter in 2011 after getting involved with a CSSDP national conference. She works towards raising awareness and making evidence-based harm reduction and drug education more accessible to youth: Honesty is the best drug policy. As a medical cannabis patient, she has experienced firsthand the obstacles and impediments caused by bad drug laws.  In 2015, she joined the CSSDP national board to connect with youth and policy makers alike and work together towards sensible drug policies on local, national and international levels. In her role as chair of Canadian Students for Sensible Drug Policy and as an advisory board member of the National Institute of Cannabis Health and Education, she works closely with stakeholders on drug and health education, from cannabis organizations to politicians and educators to the general public. 
+						<h2 class="text-center text-md-left">Dr. Florian Kerschbaum</h2>
+						Florian Kerschbaum is an associate professor in the David R. Cheriton School of Computer Science at the University of Waterloo and executive director of the Waterloo Cybersecurity and Privacy Institute.  Before he worked as chief research expert at SAP in Karlsruhe, Germany and as a software architect at Arxan Technologies in San Francisco.  He holds a Ph.D. in computer science from the Karlsruhe Institute of Technology and a master's degree from Purdue University.  His research interests revolve around data security and privacy in machine learning, IoT and blockchains.  He is the inventor of more than 50 patents and one of only three authors worldwide that have two single author papers in the leading computer security conferences in the last ten years.
 					</div>
 				</div>
 			</div>
